add crypto.util, add net/http/resp,

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Test binary, built with `go test -c`
 *.test
+*test*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -24,5 +25,3 @@ go.work.sum
 # env file
 .env
 .git
-.gitignore
-.gitkey
